--- a/app/insho-style.css
+++ b/app/insho-style.css
@@ -1,10 +1,21 @@
-.fotoku{
+body {
+    background-color: #001f3f; /* Latar belakang biru tua */
+    color: white; /* Warna teks putih */
+}
+
+.fotoku {
     border-radius: 50%;
     margin: 15px auto;
-    display: bloc;
+    display: block;
     border: solid 5px white;
     box-shadow: 0 0 10px yellow;
     height: 200px;
     width: 200px;
     object-fit: cover;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.fotoku:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 20px yellow;
 }
